# funcCF

CFGraph/: AbsCF.thy  AbsCFComp.thy  AbsCFCorrect.thy  CPSScheme.thy  CPSSmallStep.thy  CPSUtils.thy  CPSUtils2.thy  Computability.thy  Eval.thy  EvalCF.thy  ExCF.thy  ExCFSV.thy  Finite_Inductive_Set.thy  FixTransform.thy  HOLCFAbsCF.thy  HOLCFEval.thy  HOLCFExCF.thy  HOLCFExSV.thy  HOLCFList.thy  HOLCFOption.thy  HOLCFUtils.thy  HOLCF_Experiment.thy  IsaMakefile  MapSets.thy  ROOT.ML  SetMap.thy  Utils.thy
CFGraph/document/: root.bib  root.tex
CFHask/: AbsCF.hs  CFGraph.hs  CFHask.cabal  CPSPrint.hs  CPSScheme.hs  Common.hs  Eval.hs  ExCF.hs  LICENSE
ShiversCF/: AbsCF.thy  AbsCFCorrect.thy  CPSScheme.thy  Eval.thy  FunEval.thy  FunExCF.thy  HOLCF_Experiment.thy  IsaMakefile  ROOT.ML  Utils.thy
ShiversCF/document/: root.bib  root.tex
Text/: AbsCFCorrect.tex  CPSScheme.tex  CPSUtils.tex  Collatz.tex  Cover.tex  ExCFSV.tex  Studienarbeit.tex  Vortrag.tex  beamerthemeNomeata.sty  sessionGraph.dot  session_graph_to_dot.pl  spellcheck.sh
shivers-cfg/: AbsCF.hs  Eval.hs  ExCF.hs
